tests/ui/static/static-mut-requires-unsafe.stderr
error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> $DIR/static-mut-requires-unsafe.rs:4:5
   |
LL |     a += 3;
   |     ^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> $DIR/static-mut-requires-unsafe.rs:5:5
   |
LL |     a = 4;
   |     ^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> $DIR/static-mut-requires-unsafe.rs:6:14
   |
LL |     let _b = a;
   |              ^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0133`.
